--- a/app/partials/Personal/ShipmentDetails.html
+++ b/app/partials/Personal/ShipmentDetails.html
@@ -170,9 +170,88 @@
 												<div class="col-lg-4 col-md-3 col-xs-12 col-sm-6">
 													<select class="form-control input-lg" ng-model="plantSearch" >
 													<option value="">Choose Plant For Filter</option>
+														<option>JW63</option>
 														<option>JW64</option>
-														<option>JW71</option>
+														<option>JW65</option>
+														<option>JW66</option>
+														<option>JW67</option>
 														<option>JW68</option>
+														<option>JW69</option>
+														<option>JW70</option>
+														<option>JW71</option>
+														<option>JW72</option>
+														<option>JW73</option>
+														<option>JW74</option>
+														<option>JW75</option>
+														<option>JW76</option>
+														<option>JW77</option>
+														<option>JW78</option>
+														<option>JW79</option>
+														<option>JW80</option>
+														<option>JW81</option>
+														<option>JW82</option>
+														<option>JW83</option>
+														<option>JW84</option>
+														<option>JW85</option>
+														<option>JW86</option>
+														<option>JW87</option>
+														<option>JW88</option>
+														<option>JW89</option>
+														
+														<option>JWH9</option>
+														<option>JWI1</option>
+														<option>JWJ1</option>
+														<option>JWJ2</option>
+														<option>JWJ3</option>
+														
+														<!--FVEJ -->
+														
+														<option>JF06</option>
+														<option>JF07</option>
+														<option>JF16</option>
+														<option>JF17</option>
+														
+														<option>JF46</option>
+														<option>JF47</option>
+														<option>JF48</option>
+														<option>JF49</option>
+														<option>JF50</option>
+														<option>JF51</option>
+														<option>JF52</option>
+														<option>JF53</option>
+														<option>JF54</option>
+														<option>JF55</option>
+														
+														
+														<option>JFB1</option>
+														<option>JFB6</option>
+														<option>JFB7</option>
+														<option>JFB8</option>
+														<option>JFB9</option>
+														
+														<option>JFBA</option>
+														<option>JFBB</option>
+														<option>JFBC</option>
+														<option>JFBD</option>
+														<option>JFBE</option>
+														<option>JFBF</option>
+														<option>JFBG</option>
+														<option>JFBH</option>
+														<option>JFBI</option>
+														<option>JFBJ</option>
+														<option>JFBK</option>
+														<option>JFBL</option>
+														
+														<option>JWJ4</option>
+														<option>JWJ5</option>
+														<option>JWJ6</option>
+														<option>JWJ7</option>
+														
+														
+														
+														
+														
+														
 														
 													</select>
 												</div>
