--- a/app/partials/Personal/LoadInbound.html
+++ b/app/partials/Personal/LoadInbound.html
@@ -164,12 +164,24 @@
 												</div>
 
 												<div class="col-lg-4 col-md-4 col-xs-12 col-sm-6">
+												<!--
 												<div class="btn-group margin-bottom-10" style="float:right" >
 													<label class="btn btn-primary" ng-click="FilterAllStatus()" >All</label>
 													<label class="btn btn-success" ng-click="FilterSuccess()"  >Successful</label>
 													<label class="btn btn-warning" ng-click="FilterPending()"  >Pending</label>
 													<label class="btn btn-danger" ng-click="FilterError()" >Error</label>
 												</div>
+												-->
+												<select class="form-control input-lg" ng-model="StatusSearch" >
+														<option value="">Status : All</option>
+														<option value="1" >In Progress</option>
+														<option value="2">Idoc Sent To SAP</option>
+														<option value="3">Error Sending IDoc To SAP</option>
+														<option value="51">Error In SAP</option> 
+														<option value="53">Processed In SAP</option> 
+														<option value="9">Pending In queue</option>
+													</select>
+												
 												</div>
 
 
@@ -245,6 +257,9 @@
 																	<th >
                                         Status
 																	</th>
+																	<th>
+                                        Timestamp
+																	</th>
 																	<th >
                                         Correction
 																	</th>
@@ -257,23 +272,28 @@
 
 
 															<tbody>
-																<tr dir-paginate="x in SettlementList | filter:search | filter:{ Entry10 : filterCorrection } | filter:{ Entry2 : plantSearch } |itemsPerPage:10  "  data-user-id="{{x.Entry1}}">
+																<tr dir-paginate="x in SettlementList | filter:search | filter:{ Entry10 : filterCorrection } | filter:{ Entry2 : plantSearch } | filter:{ Entry9 : StatusSearch } : true | itemsPerPage:10  "  data-user-id="{{x.Entry1}}">
 																	<td>{{ x.Entry1 }}</td>
 																	<td>{{ x.Entry3 }}</td>
 																	<td>{{ x.Entry2 }}</td>
 																	<td>{{ x.Entry4 }}</td>
 																	<td>{{ x.Entry11 }}</td>
+																	
 
 																	<td>
 																		<span ng-class="{'1' : 'label label-warning', '2' : 'label label-success' , 
-															'3' : 'label label-danger' , '4' : 'label label-success' , '9' : 'label label-warning' } [x.Entry9] " >
- 														{{  (x.Entry9=='7') ? "File not received" :
-															(x.Entry9=='1') ? "Boomi Error" : 
+															'3' : 'label label-danger' , '51' : 'label label-danger' , '53' : 'label label-released' , '9' : 'label label-warning' } [x.Entry9] " >
+ 														{{  
+															(x.Entry9=='1') ? "In progress" : 
 														   (x.Entry9=='2') ? "Idoc Sent" :
-														   (x.Entry9=='3') ? "SAP Error" :
-														   (x.Entry9=='4') ? "Processed" :
+														   (x.Entry9=='3') ? "Error Sending Idoc" :
+														   (x.Entry9=='53') ? "Processed" :
+														   (x.Entry9=='51') ? "Error SAP" :
 														   "In Queue"
 														   }}
+																		</td>
+																		<td>
+																		{{ x.formattedDate }}
 																		</td>
 																		<td>
 																			<span ng-class="{ true : 'label label-warning' } [x.Entry10==1] " >
