--- a/app/partials/Personal/SOStatus.html
+++ b/app/partials/Personal/SOStatus.html
@@ -230,6 +230,9 @@
 										<th >
                                         Boomi Process Time
 										</th>
+										<th >
+                                        Last Update
+										</th>
 
 
 
@@ -265,7 +268,7 @@
 										<td>{{ x.Entry9 }}</td>
 										<td>{{ x.Entry10 }}</td>
 										<td>{{ x.Entry2 }}</td>
-
+										<td>{{ x.formattedTimestamp }}</td>
 
 										<td>
 											<span ng-class="{0 : 'label label-created', 1 : 'label label-warning' , 2 : 'label label-success' , 
