--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -75,6 +75,10 @@
                                     <a ui-sref="app.tables.EmergencyOverlap">Emergency Overlap (Pricing Tool/SAP)</a>
                                 </li>
 								
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.tables.promotion">Promotion (Pricing Tool/SAP)</a>
+                                </li>
+								
                                     </ul>
                                 </li>
 								
@@ -264,12 +268,12 @@
                             </ul>
     </li>
 	
-	
+	<!--
 	<li ui-sref-active="active">
                                     <a ui-sref="app.tables.login">Login</a>
                                 </li>
 	
-						
+		-->				
 	
 	
 
