--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -75,6 +75,10 @@
                                     <a ui-sref="app.tables.EmergencyOverlap">Emergency Overlap (Pricing Tool/SAP)</a>
                                 </li>
 								
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.tables.promotion">Promotion (Pricing Tool/SAP)</a>
+                                </li>
+								
                                     </ul>
                                 </li>
 								
@@ -268,8 +272,8 @@
 	<li ui-sref-active="active">
                                     <a ui-sref="app.tables.login">Login</a>
                                 </li>
-	-->
-						
+	
+		-->				
 	
 	
 
