--- a/app/partials/Personal/Settlement.html
+++ b/app/partials/Personal/Settlement.html
@@ -2,10 +2,28 @@
 	<div class="col-lg-12" ng-controller="SettlementController" ng-init='load()' >
 
 
-
+		
+		
+	
+           
+					
+					
+            
+	
 		<div class="col-lg-12">
 		<div class="col-md-8 col-sm-8 col-xs-8">
-				<table class="table">
+		
+			<section class="box ">
+            <header class="panel_header">
+                <h2 class="title pull-left">Today's Statistics</h2>
+                <div class="actions panel_actions pull-right">
+                    <i class="box_toggle material-icons">expand_more</i>
+                    
+                </div>
+            </header>
+			
+			 <div class="content-body  padding-top-0">
+				<table class="table table-striped">
 						<thead>
 							<tr>
 							<th></th>
@@ -26,6 +44,8 @@
 							</tr>
 								
 						</table>
+						</div>
+        </section>
 		
 		</div>
 		
