fix settlement + SO

--- a/app/partials/Personal/Settlement.html
+++ b/app/partials/Personal/Settlement.html
@@ -33,7 +33,7 @@
 						</thead>								
 						<tbody>
 							<tr>
-							<td>Total : {{total}}</td>
+							<td ng-model="StatusSearch" >Total : {{total}}</td>
 							<td><i class='fa fa-exclamation-circle icon-danger'></i> Error Sending To SAP : {{errorSentToSap}} </td>
 							<td><i class='fa fa-check-circle icon-success'></i> Sent To SAP : {{sentTopSap}} </td>
 							</tr>
