settlement Correction + auto refresh

--- a/app/partials/Personal/Promotion.html
+++ b/app/partials/Personal/Promotion.html
@@ -128,7 +128,7 @@
 													<a class="btn btn-circle btn-lg pull-right btn-success" ng-click="exportData()" >CSV    <i class='fa fa-file-excel-o icon-4x' />
 													</a>
 													
-													<a class="btn btn-circle btn-lg pull-right btn-released" ng-click="sendXml()" >Correction    <i class='fa fa-file-excel-o icon-4x' />
+													<a class="btn btn-circle btn-lg pull-right btn-warning" ng-click="sendXml()" >Correct    
 													</a>
 
 													<div class="col-md-12 col-sm-12 col-xs-12 table-responsive">
