--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -199,8 +199,12 @@
                             <ul class="wraplist wraplist-sub sub-menu dk" >
                                 <li ui-sref-active="active">
                                     <a ui-sref="app.tables.SettlementDetails">Details</a>
-                                </li>							
-                           
+                                </li>
+<!--
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.settlementCorrection">Correction Form</a>
+                                </li>								
+                           -->
                             </ul>
     </li>
 	
