JDC THrough & sales

--- a/app/partials/Personal/SalesOrderByPlant.html
+++ b/app/partials/Personal/SalesOrderByPlant.html
@@ -198,6 +198,8 @@
 												<option>SUPERDAIWA</option>
 												<option>EOS-Normal</option>
 												<option>NEOS_Normal</option>
+												<option>NEOS_JDC_Sales</option>
+												<option>NEOS_JDC_Through</option>
 												<option>Manual</option>
 											</select>
 										</th>
